# mcpdocs

./: .gitignore  IMPLEMENTATION_SUMMARY.md  MCP_AGENT_README.md  README.md  example_usage.py  mcp-config.json  plot_sin.py  pyproject.toml  reana.yaml  test_agent.py  verify_implementation.sh
.github/workflows/: test-agent.yml
dask_notebook/: README.md  dask_interactive.ipynb
dask_s3_plot/: README.md  hexbin_plots.py  reana.yaml
dask_s3_read/: README.md  read_stats.py  reana.yaml
mcpdocs_agent/: __init__.py  __main__.py  server.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
sin_plot/: README.md  generate_data.py  plot_sin.py  reana.yaml
