[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpdocs-agent"
version = "0.1.0"
description = "MCP server for REANA scientific workflow automation and data analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mcpdocs team", email = "arm2arm@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.1.0",
    "pydantic>=2.10.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "dask>=2024.12.0",
    "s3fs>=2024.12.0",
    "pyarrow>=18.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/arm2arm/mcpdocs"
Repository = "https://github.com/arm2arm/mcpdocs"
Issues = "https://github.com/arm2arm/mcpdocs/issues"

[tool.setuptools]
packages = ["mcpdocs_agent"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
